<resources>
    <string name="app_name">WGU C196</string>

    // Main Menu
    <string name="action_AddSamples">Add Sample Data</string>
    <string name="action_DeleteSamples">Delete Sample Data</string>

    // Primary Activity Menu Headings
    <string name="title_activity_edit_term">Edit Term</string>
    <string name="title_activity_edit_course">Edit Course</string>
    <string name="title_activity_edit_assessment">Edit Assessment</string>

    // Term-Specific (Bottom) Menu Headings
    <string name="txt_TermInfo">Term Info</string>
    <string name="txt_TermCourses">Term Course List</string>
    <string name="txt_TermNotes">Term Notes</string>

    // Course-Specific (Bottom) Menu Headings
    <string name="txt_CourseInfo">Course Info</string>
    <string name="txt_CourseAssessments">Assessments</string>
    <string name="txt_CourseNotes">Course Notes</string>

    // Assessment-Specific (Bottom) Menu Headings
    <string name="txt_AssessmentInfo">Assessment Info</string>
    <string name="txt_AssessmentNotes">Assessment Notes</string>

    // Note Activity Headings
    <string name="title_activity_edit_assessment_note">editAssessmentNote</string>
    <string name="title_activity_edit_course_note">editCourseNote</string>
    <string name="title_activity_edit_term_note">editTermNote</string>

    <string name="LogTag">AnadonC196</string>
    <string name="txt_TermDelete">Delete Term</string>
    <string name="txtGoodToast">%1$s (%2$s) Successfully Saved</string>
    <string name="txtTerm">Term</string>
    <string name="txtBadToast">Unable to save the %1$s Object (%2$s)</string>
    <string name="txtDeleteToast">Successfully Deleted %1$s Object (%2$s).</string>
    <string name="toastChanged">Changes to %1$s (%2$s) encountered. Processing Save Request.</string>
    <string name="txt_CreateTermNote">Create Term Note</string>
    <string name="txt_EditTermNote">Edit Term Note</string>
    <string name="txtCourse">Course</string>
    <string name="txtCourseMentor">Course Mentors</string>
    <string name="title_activity_edit_course_mentor">Course Mentor</string>
    <string name="txt_AssessmentTypePractical">Assessment Type (Practical)</string>
    <string name="txt_AssessmentTypeObjective">Assessment Type (Objective)</string>

    <string-array name="CourseStates">
        <item>Planned</item>
        <item>In Progress</item>
        <item>Dropped</item>
        <item>Completed</item>
    </string-array>
</resources>
